ai assistance breaking down on contextual awareness in utils.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(vecdec)
+project(geometry)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -13,8 +13,8 @@ if(_guardian_idx EQUAL -1)
     list(APPEND C_SOURCES src/geometry/guardian.c)
 endif()
 set_source_files_properties(src/geometry/guardian.c PROPERTIES LANGUAGE C)
-add_library(vecdec ${CPP_SOURCES} ${C_SOURCES})
-target_sources(vecdec PRIVATE src/geometry/guardian.c)
+add_library(geometry ${CPP_SOURCES} ${C_SOURCES})
+target_sources(geometry PRIVATE src/geometry/guardian.c)
 
 add_library(geometry_stencil
     src/geometry/stencil.c
@@ -28,9 +28,9 @@ target_include_directories(geometry_relational_vector PUBLIC include)
 
 # Examples are optional; disable by default to avoid external deps
 # add_executable(example examples/minimal.cpp)
-# target_link_libraries(example vecdec)
+# target_link_libraries(example geometry)
 
 enable_testing()
 add_executable(utils_test tests/utils_test.c)
-target_link_libraries(utils_test vecdec)
+target_link_libraries(utils_test geometry)
 add_test(NAME utils_test COMMAND utils_test)
