Expand complex numbers module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,7 @@ add_test(NAME graph_ops_handler_test COMMAND graph_ops_handler_test)
 add_executable(iterative_solver_test tests/iterative_solver_test.c)
 target_link_libraries(iterative_solver_test geometry)
 add_test(NAME iterative_solver_test COMMAND iterative_solver_test)
+
+add_executable(complex_numbers_test tests/complex_numbers_test.c)
+target_link_libraries(complex_numbers_test geometry)
+add_test(NAME complex_numbers_test COMMAND complex_numbers_test)
